# Reverse-Vending-Machine

./: platformio.ini
lib/: README
src/: CMakeLists.txt  GUI.c  GUI.h  GUI_Variables.c  GUI_events_wrapper.cpp  GUI_events_wrapper.h  display.h  espnow_config.cpp  espnow_config.h  filelist.txt  main.cpp  qrcode_generator.cpp  qrcode_generator.h  ui_helpers.h
src/Behaviour/: GUI_Animations.c  GUI_Events.c
src/Content/screens/: screen.c  screen_1.c  screen_2.c
src/assets/images/: ecobarter_150x150.c  facebook_100x100.c  facebook_150X150.c  upload_download__9__142x142_83b0827feb384e1889b95974462db75c_png.c  upload_image_142x142_94f6567eb02445419fdec27f34a3224b_png.c  upload_vector_100x50_287c335e4fd947c8b62a60dbfe9a07a1_png.c  upload_vector_110x110_20b0dcae8a69495aa6b0b3ebf8d88194_png.c  upload_vector_120x120_42befb7f73aa4429aa80d754d7a5b864_png.c  upload_vector_24x25_90319e29db3c4a63970161315d1a1ecb_png.c  upload_vector_250x60_6d44a08093064a28909ca60ec19b42df_png.c  upload_vector_25x30_17e13a5f03d94996aeba296d9b94634a_png.c  upload_vector_280x280_4922c0b2d11645ecb6964b5000ff7e59_png.c  upload_vector_30x15_adaac31bac844762adf5da297da2223a_png.c  upload_vector_44x30_7b32e144298344d4a7e274cb468fbedd_png.c  upload_vector_49_14_8220x8000_8b0ff4dc0c6947be903accae0d5fc817_png.c  upload_vector_49_15_120x4_10a324c47e6b455eae3a1c904328f4a3_png.c  upload_vector_49_45_28550x0_c3704350c46a4d41b6705afd568e5b2e_png.c  upload_vector_50x30_a63f5fdb173a49b99b771acabba63927_png.c  upload_vector_56x20_71b2ced0f46c4eb9b37578de89e4756d_png.c  upload_vector_56x90_5c52ae5171e846908af8ce8513b83bf4_png.c  upload_vector_60x20_eea473bc133e47ed9f502d07275c056a_png.c  upload_vector_60x80_5c0471f6a5f94344818414c1aad5a69d_png.c  upload_vector_80x80_7e603fce42ac472dae47fb7775f1ab4e_png.c
src/assets/styles/: GUI_GlobalStyles.c
src/fonts/: inter64_1.c  inter_11_700_1.c  inter_16_1.c  inter_22_1.c  inter_26_700_1.c  inter_30_700_1.c  inter_36_700_1.c  inter_48_1.c  inter_60_700_1.c  inter_9_700_1.c
